inconsistency check for uploaded files (#179)
* column existence check for ref voc

* load error check

* rebase

* file_type added

* simultaneous upload

* 409 5 1 fix

* ref check fix
