# api/swagger_server/swagger/swagger.yaml
@@ -48,11 +48,6 @@ paths:
             File Format Error.
             ex. Invalid file uploaded.
             Set the error file name for the message.
-            phase 0, reason 0: for editing vocaburaly, some of a required columns are not found. Missing colmuns are in terms parameter.
-            phase 1, reason 0: for editing vocaburaly meta, some of a required columns are not found. Missing colmuns are in terms parameter.
-            phase 2, reason 0: for reference vocaburaly1, some of a required columns are not found. Missing colmuns are in terms parameter.
-            phase 3, reason 0: for reference vocaburaly2, some of a required columns are not found. Missing colmuns are in terms parameter.
-            phase 4, reason 0: for reference vocaburaly3, some of a required columns are not found. Missing colmuns are in terms parameter.
           content:
             application/json:
               schema:
@@ -75,25 +70,63 @@ paths:
           description: |
             Integrity check Error.
             phase : Returns the phase in which the error occurred.
+            "1" means it was in the term check phase error.
             "2" means it was in the preferred_label check phase error.
-            "3" means it was in the uri check phase error.
-            "4" means it was in the broader_term check phase error.
+            "3" means it was in the lang check phase error.
+            "4" means it was in the uri check phase error.
+            "5" means it was in the broader_term check phase error.
+            "6" means it was in the other_voc_syn_uri check phase error.
+            "7" means it was in the term_description check phase error.
+            "8" means it was in the created_time check phase error.
+            "9" means it was in the modified_time check phase error.
+            "10" means it was in the synonym_candidate check phase error.
+            "11" means it was in the broader_term_candidate check phase error.
+            "12" means it was in the position_x check phase error.
+            "13" means it was in the position_y check phase error.
+            "14" means it was in the color1 check phase error.
+            "15" means it was in the color2 check phase error.
+            "16" means it was in the confirm check phase error.
+            "90" means it was in the combination check phase error.
+            "99" means it was in the other_unknown check phase error.
             terms : Returns terms in which the error occurred.
+            langs : Returns language in which the error occurred.
             reason : Returns the check error reason code.
-            If phase is 2 and reason is 0, the client will display
-            "同義関係と思われる、用語a,b,cの代表語を1つに揃えてください".
-            If phase is 3 and reason is 0, the client will display
-            "用語a,b,cの代表語のURIの個数を1つに絞ってください".
-            If phase is 3 and reason is 1, the client will display
-            "用語a,b,cの代表語のURIを統一してください".
-            If phase is 3 and reason is 2, the client will display
-            "代表語a,b,cについて、同じ代表語のURIが設定されています。代表語のURIを修正してください".
-            If phase is 3 and reason is 3, the client will display
-            "用語a,b,cの代表語のURIを1つに揃えてください".
-            If phase is 4 and reason is 0, the client will display
-            "代表語aの上位語の代表語が一致するように上位語を修正してください".
-            If phase is 4 and reason is 1, the client will display
-            "代表語a,b,cは、関係性が循環しています。上位語を修正してください。".
+            file_type: Returns which file cause error. 0 editing volabulary, 1,2,3 reference vocabulary, 4 editing volabulary meta.
+            
+            phase 1, reason 0 (This returns only one error even if there are many)
+            条件を満たさない用語列が空白のものが有ります。代表語のURIはｘｘｘです。行を削除するか、空白の条件を満たすように編集した後に再読み込みしてください。
+            phase 1, reason 1 (This returns only one error even if there are many)
+            用語名列で空白のものが存在条件を満たしていますが、複数行あります。代表語のURIはｘｘｘです。行を削除するか、用語を入力した後に再読み込みしてください。
+            phase 1, reason 2 (This returns only one error even if there are many)
+            用語名列で空白のものが存在条件を満たしていますが、同一言語の同義グループに値のある行があります。代表語のURIはｘｘｘです。行を削除するか、用語を入力した後に再読み込みしてください。
+            phase 1, reason 5
+            用語名列で用語a, b, c @langが重複しています。行を削除など、重複しないように編集した後に再読み込みしてください。
+            phase 2, reason 0 (This returns only one error group even if there are many error group)
+            同義関係と思われる、用語a,b,cの言語ごとの代表語を1つに揃えた後に再読み込みしてください。
+            pahse 2, reason 1 (This returns only one error group even if there are many error group)
+            同義関係の用語a,b,cの中に、どの言語にも代表語が無いです。いずれかの言語の代表語を設定した後に再読み込みしてください。
+            pahse 2, reason 2 (This returns only one error group even if there are many error group)
+            複数の同義関係の用語a,b,c, @langで同じ代表語を持っています。異なる同義語では異なる代表語を持つようにした後に再読み込みしてください。
+            phase 3, reason 0
+            「言語」列がja, enもしくは空白以外が含まれています。ja, en, 空文字を記入した後に再読み込みしてください。
+            phase 4, reasn 0
+            「代表語のURI」列に空白または異なる語彙体系のURIが含まれています。同じ語彙体系のURIを記入した後に再読み込みしてください。
+            phase 5, reason 0
+            「上位語のURI」列に空白または異なる語彙体系のURIが含まれています。同じ語彙体系のURIを記入した後に再読み込みしてください。
+            phase 5, reason 1 (This returns only one error even if there are many)
+            用語a, b, c で上位語のURIが一つに揃っていません。一つになるように編集した後に再読み込みしてください。
+            phase 5, reason 2 (This returns only one error even if there are many)
+            用語a, b, c で上位語のURIとして指定された用語が存在しません。URIを直すか削除するかして編集した後に再読み込みしてください。
+            phase 5, reason 3 (This returns only one error even if there are many)
+            用語a, b, c で、上下関係性が循環しています。上位語を修正した後に再読み込みしてください。
+            phase 6, reason 0 (This returns only one error even if there are many)
+            同義関係の用語a,b,c で、他語彙体系の同義語のURIが同義語内で異なります。1つに揃えた後に再読み込みしてください。
+            phase 7, reason 0 (This returns only one error even if there are many)
+            同義関係の用語a@ja,b@ja,c@jaで、用語の説明が異なっています。1つに揃えた後に再読み込みしてください。
+            phase 8, reason 0 (This returns only one error even if there are many)
+            同義関係の用語a@ja,b@ja,c@jaで、作成日が異なっています。1つに揃えた後に再読み込みしてください。
+            phase 9, reason 0 (This returns only one error even if there are many)
+            同義関係の用語a@ja,b@ja,c@jaで、最終更新日が異なっています。1つに揃えた後に再読み込みしてください。
           content:
             application/json:
               schema:
@@ -105,6 +138,25 @@ paths:
                 - b
                 - c
                 reason: 0
+        "411":
+          description: |
+            File Format Error.
+            ex. Invalid file uploaded.
+            Set the error file name for the message.
+            phase -1, reason 0: Something is wrong.
+            phase 0, reason 0: Data Format Error.
+            phase 1, reason 0: for editing vocaburaly, some of a required columns are not found. Missing colmuns are in terms parameter.
+            phase 2, reason 0: for editing vocaburaly meta, some of a required columns are not found. Missing colmuns are in terms parameter.
+            phase 3, reason 0: for reference vocaburaly1, some of a required columns are not found. Missing colmuns are in terms parameter.
+            phase 4, reason 0: for reference vocaburaly2, some of a required columns are not found. Missing colmuns are in terms parameter.
+            phase 5, reason 0: for reference vocaburaly3, some of a required columns are not found. Missing colmuns are in terms parameter.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CheckErrorResponse'
+              example:
+                result: 0
+                message: editing_vocabulary.csv
       x-swagger-router-controller: swagger_server.controllers.file_controller
       x-codegen-request-body-name: body
       x-openapi-router-controller: swagger_server.controllers.file_controller
@@ -555,5 +607,11 @@ components:
           type: array
           items:
             type: string
+        langs:
+          type: array
+          items:
+            type: string
         reason:
+          type: integer
+        file_type:
           type: integer
